--- a/languages/video-background.pot
+++ b/languages/video-background.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: Video Background\n"
-"POT-Creation-Date: 2016-06-24 00:49-0700\n"
+"POT-Creation-Date: 2016-06-24 00:51-0700\n"
 "PO-Revision-Date: 2016-03-30 22:31-0700\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -279,9 +279,9 @@ msgstr ""
 #: candide-vidbg.php:540
 msgid ""
 "<p>If you like Video Background and want to show your support, consider "
-"purchasing the <a href=\"http://pushlabs.co/video-background-pro\" target="
-"\"_blank\">pro version</a>. It comes with plenty of helpful features that "
-"make your life easier like:</p>"
+"purchasing the <a href=\"http://pushlabs.co/video-background-pro\" rel="
+"\"nofollow\" target=\"_blank\">pro version</a>. It comes with plenty of "
+"helpful features that make your life easier like:</p>"
 msgstr ""
 
 #: candide-vidbg.php:542
